src/tests/snapshots/all__keyword__index.snap
---
source: src/tests/keyword.rs
expression: json
---
{
  "keywords": [],
  "meta": {
    "total": 0
  }
}
