src/tests/snapshots/all__keyword__show.snap
---
source: src/tests/keyword.rs
expression: json
---
{
  "keyword": {
    "crates_cnt": 0,
    "created_at": "[datetime]",
    "id": "foo",
    "keyword": "foo"
  }
}
