src/tests/snapshots/all__keyword__uppercase.snap
---
source: src/tests/keyword.rs
expression: json
---
{
  "keyword": {
    "crates_cnt": 0,
    "created_at": "[datetime]",
    "id": "upper",
    "keyword": "upper"
  }
}
